# park-it

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
src/parking/: __main__.py  domain_types.py  examples.py
src/parking/models/: fees.py  parking_lot.py  slips.py  vehicle.py
tests/: test_parking.py
